syntax = "proto3";

option go_package = "shark/pkg/proto/member";
// protoc --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative member.proto
package member;

service Service {
  rpc Register (Req) returns (Rsp);
  rpc getMember (Req) returns (Rsp);
  rpc UpdateMember(Req) returns (Rsp);
}

message Member{
   uint64 uin =1;
   string member_id = 2;
   bytes  password = 3;
   string name = 4;
   bytes profile = 5;
   bytes  signature = 6;
   string email = 7;
   uint64 phone = 8;
   uint32 message_notify = 9;
   uint64 create_time = 10;
   uint64 modify_time = 11;
   bool  is_deleted = 12;
}

message MemberFilter{
  uint32   uin =1;
  uint32   member_id = 2;
  uint32   password = 3;
  uint32   name = 4;
  uint32   profile = 5;
  uint32   signature = 6;
  uint32   email = 7;
  uint32   phone = 8;
  uint32   message_notify = 9;
  uint32   create_time = 10;
  uint32   modify_time = 11;
  uint32   is_deleted = 12;
}

message Req{
    repeated  Member member  = 1;
    MemberFilter filter      = 2;
}

message Rsp{
  repeated  Member member = 1;
}

